# eanray

./: .gitignore  Cargo.toml  LICENSE  LICENSE-3RD-PARTY-FRONTEND.txt  README.md  THIRD-PARTY-NOTICES.txt  config.toml  release.sh
examples/: rt1w.json
examples/rt1w/: common.lua  final_scene_utils.lua  scene16_glass_sphere.json  scene16_glass_sphere.lua  scene17_air_bubble_in_water.json  scene17_air_bubble_in_water.lua  scene18_hollow_glass_sphere.json  scene18_hollow_glass_sphere.lua  scene19_wide_angle_view.json  scene19_wide_angle_view.lua  scene20_a_distant_view.lua  scene20_distant_view.json  scene21_zooming_in.json  scene21_zooming_in.lua  scene22_depth_of_field.json  scene22_depth_of_field.lua  scene23_final_scene.lua
examples/rtnw/: final_scene_with_bouncing_spheres.lua  scene10_final_scene.lua  scene1_bouncing_spheres.lua  scene1_bvh.lua  scene2_spheres_on_checkered_ground.lua  scene3_two_checkered_spheres.lua  scene4_earth_map.lua  scene5_hashed_random_texture.lua  scene5_perlin_noise.lua  scene6_quads.lua  scene7_simple_light.lua  scene8_cornell_box.lua  scene9_cornell_smoke.lua
examples/v0_1/: cover.lua  example1.lua  example2_motion_blurr.lua  triangles.lua
examples/v2025_09/: cover.lua  cylinders.lua  disks.lua  planets_on_the_ground.lua  sun_bonfire.lua  sun_campfire.lua  triangles.lua
scripts/: helpers.lua
src/: camera.rs  color.rs  hit.rs  main.rs  ray.rs  settings.rs
src/bindings/: hittables.rs  lua.rs  macros.rs  materials.rs  math.rs  mod.rs  schemas.rs  shapes.rs  textures.rs  transforms.rs  (+1 more)
ui/: .gitignore  .scalafmt.conf  build.sbt
(+66 files in other folders)
