[package]
name = "eanray"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.9"
config = "0.15.11"
mlua = { version = "0.10.5", features = ["lua54", "vendored", "serialize"] }
paste = "1.0"
log = "0.4"
env_logger = "0.11.8"

[profile.release]
debug = 1